--- a/meta-ostro/README
+++ b/meta-ostro/README
@@ -1,5 +1,5 @@
 This README file contains information on the contents of the
-iot layer.
+meta-ostro layer.
 
 Please see the corresponding sections below for details.
 
